--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ referrerpolicy="no-referrer" />
 />
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body class="site-body">
-<header class="header">
+<!-- <body class="site-body"> -->
+<!-- <header class="header">
     <div class="container header-container">
     <nav class="header-navigation">
         <a href="/" class="header-web link">Web
@@ -38,14 +38,14 @@ referrerpolicy="no-referrer" />
 <li><a class="header-tel link" href="tel:++11(000)1111111">+11 (000) 111-11-11</a></li>
 </ul>
     </div>
-</header>
+</header> -->
 <main>
-<section class="hero">
+<!-- <section class="hero">
     <div class="container">
 <h1 class="hero-title">Effective Solutions for Your Business</h1>
 <button type="button" class="hero-btn" data-modal-open>Order Service</button>
 </div>
-</section>
+</section> -->
 <section class="about">
     <div class="container">
         <ul class="about-icon list">
@@ -99,19 +99,7 @@ referrerpolicy="no-referrer" />
     </div>
 </section>
 
-<section class="work">
-    <div class="container">
-<h2 class="work-title">What are we doing</h2>
-<ul class="work-list list">
-<li class="work-item">
-<img src="./images/comp.jpg" alt="computer" width="360" height="300"/></li>
-<li class="work-item">
-<img src="./images/watch.jpg" alt="WhatsApp" width="360" height="300"/></li>
-<li class="work-item">
-<img src="./images/tel.jpg" alt="telephone" width="360" height="300"/></li>
-</ul>
-</div>
-</section>
+
 <section class="team">
     <div class="container">
 <h2 class="team-title">Our Team</h2>
@@ -316,7 +304,7 @@ referrerpolicy="no-referrer" />
     </div>
 </section>
 </main>
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="container">
         <div class="before-social">
 <a href="/" class="footer-web link">Web
@@ -382,8 +370,8 @@ referrerpolicy="no-referrer" />
 
 </div>
 </div>
-</footer>
-<div class="backdrop is-hidden" data-modal data-backdrop>
+</footer> -->
+<!-- <div class="backdrop is-hidden" data-modal data-backdrop>
     <div class="modal">
         <button class="btn-close" data-modal-close>
         <svg class="modal-icon"width="8px" height="8px">
@@ -435,7 +423,7 @@ Privacy Policy</a>
 </div>
 </form>
     </div>
-</div>
+</div> -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
