--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@ integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8
 crossorigin="anonymous" 
 referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="./css/styles.css" />
+<link rel="stylesheet" href="./css/mobile.css" />
+<link rel="stylesheet" href="./css/tablet.css" />
+<link rel="stylesheet" href="./css/desctop.css" />
 <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<!-- <body class="site-body"> -->
-<!-- <header class="header">
+<body class="site-body"> -->
+<header class="header">
     <div class="container header-container">
     <nav class="header-navigation">
         <a href="/" class="header-web link">Web
@@ -38,14 +41,14 @@ referrerpolicy="no-referrer" />
 <li><a class="header-tel link" href="tel:++11(000)1111111">+11 (000) 111-11-11</a></li>
 </ul>
     </div>
-</header> -->
+</header>
 <main>
-<!-- <section class="hero">
+<section class="hero">
     <div class="container">
 <h1 class="hero-title">Effective Solutions for Your Business</h1>
 <button type="button" class="hero-btn" data-modal-open>Order Service</button>
 </div>
-</section> -->
+</section>
 <section class="about">
     <div class="container">
         <ul class="about-icon list">
@@ -105,7 +108,11 @@ referrerpolicy="no-referrer" />
 <h2 class="team-title">Our Team</h2>
 <ul class="team-list list">
 <li class="team-item">
-<img src="./images/mg.jpg" alt="mark" width="264" height="260"/>
+<img 
+srcset="
+./images/mg.jpg 1x,
+./images/mg-2x.jpg 2x"
+src="./images/mg.jpg" alt="mark" width="264" height="260"/>
 <div class="card-content">
     <h3 class="team-designer">Mark Guerrero</h3>
 <p class="team-text">Product Designer</p>
@@ -141,7 +148,12 @@ referrerpolicy="no-referrer" />
     </ul>
 </div>
 </li>
-<li class="team-item"><img src="./images/tom.jpg" alt="tom" width="264" height="260"/>
+<li class="team-item">
+    <img src="./images/tom.jpg"
+srcset="
+./images/tom.jpg 1x,
+./images/tom-2x.jpg 2x"
+     alt="tom" width="264" height="260"/>
 <div class="card-content">
     <h3 class="team-designer">Tom Ford</h3>
 <p class="team-text">Frontend Developer</p>
@@ -177,7 +189,12 @@ referrerpolicy="no-referrer" />
     </ul>
 </div>
 </li>
-<li class="team-item"><img src="./images/camila.jpg" alt="camila" width="264" height="260"/>
+<li class="team-item">
+    <img src="./images/camila.jpg"
+    srcset="
+./images/camila.jpg 1x,
+./images/camila-2x.jpg 2x"
+    alt="camila" width="264" height="260"/>
 <div class="card-content">
     <h3 class="team-designer">Camila Garcia</h3>
 <p class="team-text">Marketing</p>
@@ -214,7 +231,12 @@ referrerpolicy="no-referrer" />
 
 </div>
 </li>
-<li class="team-item"><img src="./images/dan.jpg" alt="daniel" width="264" height="260"/>
+<li class="team-item">
+    <img src="./images/dan.jpg" 
+    srcset="
+    ./images/dan.jpg 1x,
+    ./images/dan-2x.jpg 2x"
+    alt="daniel" width="264" height="260"/>
 <div class="card-content">
     <h3 class="team-designer">Daniel Wilson</h3>
 <p class="team-text">UI Designer</p>
