--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ referrerpolicy="no-referrer" />
 />
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body class="site-body"> -->
+<body class="site-body">
 <header class="header">
     <div class="container header-container">
     <nav class="header-navigation">
@@ -40,6 +40,63 @@ referrerpolicy="no-referrer" />
 <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 <li><a class="header-tel link" href="tel:++11(000)1111111">+11 (000) 111-11-11</a></li>
 </ul>
+<button type="button "  class="menu-open " data-menu-open>
+    <svg class="menu-open-icon" width="32" height="22">
+    <use href="./images/icons.svg#icon-charm_menu-hamburger"></use>
+</svg></button>
+    </div>
+    <div class="mob-menu is-hidden " data-menu >
+        <div class="container">
+            <div class="mob-menu-top">
+        <button type="button"  class="menu-close is-hidden "data-menu-close >
+            
+            <svg class="menu-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+        </svg></button>
+        <ul class="mob-menu-list list">
+            <li class="mob-menu-item"><a class="mob-menu-link link current" href="Studio">Studio</a></li>
+            <li class="mob-menu-item"><a class="mob-menu-link link" href="./portfolio.html">Portfolio</a></li>
+            <li class="mob-menu-item"><a class="mob-menu-link link" href="Contacts">Contacts</a></li>
+            </ul> 
+        </div>
+    <div class="mob-menu-bottom">
+    <ul class="mob-menu-after-list list">
+        <li><a class="mob-menu-tel link" href="tel:++11(000)1111111">+11 (000) 111-11-11</a></li>
+    <li><a class="mob-menu-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    
+    </ul>
+    <ul class="mob-soc-list list">
+        <li class="mob-soc-item">
+        <a class="mob-soc-link link" href="https://www.instagram.com/">
+        <svg class="mob-soc-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-instagram" ></use>
+        </svg>
+        </a>
+        </li>
+        <li class="mob-soc-item">
+        <a class="mob-soc-link link" href="https://twitter.com/">
+            <svg class="mob-soc-icon"width="24" height="19.5">
+                <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+        </a>
+    </li>
+        <li class="mob-soc-item">
+            <a class="mob-soc-link link" href="https://facebook.com//">
+            <svg class="mob-soc-icon" width="12" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+        </a>
+    </li>
+        <li class="mob-soc-item">
+            <a class="mob-soc-link link" href="https://www.linkedin.com/">
+            <svg class="mob-soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+        </a>
+        </li>
+        </ul>
+    </div>
+    </div>
     </div>
 </header>
 <main>
@@ -326,7 +383,7 @@ srcset="
     </div>
 </section>
 </main>
-<!-- <footer class="footer">
+<footer class="footer">
     <div class="container">
         <div class="before-social">
 <a href="/" class="footer-web link">Web
@@ -392,7 +449,7 @@ srcset="
 
 </div>
 </div>
-</footer> -->
+</footer>
 <!-- <div class="backdrop is-hidden" data-modal data-backdrop>
     <div class="modal">
         <button class="btn-close" data-modal-close>
@@ -451,5 +508,6 @@ Privacy Policy</a>
     AOS.init();
 </script>
 <script src="./js/modal.js"></script>
+<script src="./js/menu.js"></script>
 </body>
 </html>
