--- a/index.html
+++ b/index.html
@@ -384,73 +384,59 @@ srcset="
 </section>
 </main>
 <footer class="footer">
-    <div class="container">
-        <div class="before-social">
-<a href="/" class="footer-web link">Web
-<span class="footer-studio link">Studio</span>
-</a>
-<p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </div>
-
-<div class="social">
-<h3 class="soc-tex">Social media</h3>
-<ul class="soc-list list">
+<div class="container container-footer">
+    <div class="before-social">
+    <a class="footer-link link" href="#"> <span class="footer-web">Web</span><span class="footer-studio">Studio</span> </a>
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+    <div class="social">
+    <h4 class="soc-tex">Social media</h4>
+    <ul class="soc-list list">
     <li class="soc-item">
-        <a class="soc-link" href="https://www.instagram.com/">
-
-            <svg class="soc-icon" width="24px" height="24px">
-                <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-        </a>
+    <a class="soc-link" href="https://www.instagram.com/">
+    <svg class="soc-item-ftr" width="24" height="24">
+    <use href="./images/icons.svg#icon-instagram"></use>
+    </svg>
+    </a>
     </li>
     <li class="soc-item">
-        <a class="soc-link" href="https://twitter.com/">
-            <svg class="soc-icon" width="24px" height="24px">
-                <use href="./images/icons.svg#icon-twitter"></use>
-            </svg>
-        </a>
+    <a class="soc-link" href="https://twitter.com/">
+    <svg class="soc-item-ftr" width="24" height="24">
+    <use href="./images/icons.svg#icon-twitter"></use>
+    </svg>
+    </a>
     </li>
     <li class="soc-item">
-        <a class="soc-link" href="https://facebook.com/">
-            <svg class="soc-icon" width="24px" height="24px">
-                <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-        </a>
+    <a class="soc-link" href="https://facebook.com/">
+    <svg class="soc-item-ftr" width="24" height="24">
+    <use href="./images/icons.svg#icon-facebook"></use>
+    </svg>
+    </a>
     </li>
     <li class="soc-item">
-        <a class="soc-link" href="https://www.linkedin.com/">
-            <svg class="soc-icon" width="24px" height="24px">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-        </a>
+    <a class="soc-link" href="https://www.linkedin.com/">
+     <svg class="soc-item-ftr" width="24" height="24">
+     <use href="./images/icons.svg#icon-linkedin"></use>
+     </svg>
+    </a>
     </li>
-</ul>
-</div>
-<div class="subscribe-footer">
-    <p class="subscribe-titl">Subscribe</p>
+    </ul>
+    </div>    
+    <div class="subscribe-footer">
+        <p class="subscribe-titl">Subscribe</p>
         <form class="subscribe-form">
-        <label for="subscribe" class="subscribe-name">
-        <input
-                type="email"
-                class="subscribe-input"
-                name="subscribe"
-                id=""
-                placeholder="E-mail"
-            />
-            <div class="modal-button-subscribe">
-            <button type="submit" class="subscribe-button">Subscribe
-<svg class="icons-subscribe" width="24" height="24">
-<use href="./images/icons.svg#icon-Frame"></use>
-</svg>
-</button>
-</div>
-</label>
-</form>
-
-</div>
-</div>
+            <input class="input-mail" type="email" name="email" id="mail-sub" placeholder="E-mail">
+            
+            <button class="button-sub" type="submit"><span class="btn-sub">Subscribe</span>
+                <svg class="icon-sub" width="24" height="24">
+                    <use href="./images/icons.svg#icon-Frame"></use>
+                </svg>
+            </button>
+        </form>
+        </div>
+   </div>
 </footer>
-<!-- <div class="backdrop is-hidden" data-modal data-backdrop>
+<div class="backdrop is-hidden" data-modal data-backdrop>
     <div class="modal">
         <button class="btn-close" data-modal-close>
         <svg class="modal-icon"width="8px" height="8px">
@@ -502,7 +488,7 @@ Privacy Policy</a>
 </div>
 </form>
     </div>
-</div> -->
+</div>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
