--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ referrerpolicy="no-referrer" />
        </div>
         <div class="conteiner-contact">
             <ul class="contact-menu">
-                <li class="contact-tel-mail"><a class="contacts-menu-item nav-tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-                <li class="contact-tel-mail"><a class="contacts-menu-mail-item nav-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contact-tel-mail "><a class="contacts-menu-item nav-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+                <li class="contact-tel-mail "><a class="contacts-menu-mail-item nav-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         </ul>
         <ul class="mob-soc-list list">
             <li class="mob-soc-item">
@@ -387,6 +387,7 @@ srcset="
 </section>
 </main>
 <footer class="footer">
+    <div class="mini-container">
 <div class="container container-footer">
     <div class="before-social">
     <a class="footer-link link" href="#"> <span class="footer-web">Web</span><span class="footer-studio">Studio</span> </a>
@@ -424,7 +425,8 @@ srcset="
     </a>
     </li>
     </ul>
-    </div>    
+    </div>   
+    
     <div class="subscribe-footer">
         <p class="subscribe-titl">Subscribe</p>
         <form class="subscribe-form">
@@ -438,22 +440,10 @@ srcset="
         </form>
         </div>
    </div>
+</div>
+ 
 </footer>
 
-    <!-- <div class="ftr-form">
-        <p class="ftr-subscribe">Subscribe</p>
-        <form class="form-sub">
-            <input class="input-mail" type="email" name="email" id="mail-sub" placeholder="E-mail">
-            
-            <button class="button-sub" type="submit"><span class="btn-sub">Subscribe</span>
-                <svg class="icon-sub" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-telegram"></use>
-                </svg>
-            </button>
-        </form>
-        </div>
-   </div>
-</footer> --> -->
 <div class="backdrop is-hidden" data-modal data-backdrop>
     <div class="modal">
         <button class="btn-close" data-modal-close>
