--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ referrerpolicy="no-referrer" />
         <span class="header-studio link">Studio</span>
         </a>
         <ul class="header-list list">
-        <li class="header-item"><a class="header-link link current" href="Studio">Studio</a></li>
+        <li class="header-item"><a class="header-link-new link current" href="Studio">Studio</a></li>
         <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
         <li class="header-item"><a class="header-link link" href="Contacts">Contacts</a></li>
         </ul> 
@@ -58,7 +58,7 @@ referrerpolicy="no-referrer" />
         <ul class="modal-nav-item list">
                 <li class="linku-menu"><a class="nav-link-menu link" href="./index.html">Studio</a></li>
                 <li class="linku-menu"><a class="nav-link-menu link" href="./portfolio.html">Portfolio</a></li>
-                <li class="linku-menu"><a class="nav-link-menu link" href="#">Contacts</a></li>
+                <li class="linku-menu"><a class="nav-link-menu-new link" href="#">Contacts</a></li>
             </ul>
        </div>
         <div class="conteiner-contact">
@@ -83,7 +83,7 @@ referrerpolicy="no-referrer" />
         </li>
             <li class="mob-soc-item">
                 <a class="mob-soc-link link" href="https://facebook.com//">
-                <svg class="mob-soc-icon" width="12" height="24">
+                <svg class="mob-soc-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
             </a>
@@ -111,6 +111,7 @@ referrerpolicy="no-referrer" />
 </section>
 <section class="about">
     <div class="container">
+        <h2 class="zagolovok">zagolovok</h2>
         <ul class="about-icon list">
             <li class="about-items">
                 <div class="about-picture">
@@ -390,7 +391,7 @@ srcset="
     <div class="mini-container">
 <div class="container container-footer">
     <div class="before-social">
-    <a class="footer-link link" href="#"> <span class="footer-web">Web</span><span class="footer-studio">Studio</span> </a>
+    <a class="footer-link link" href="#"> <span class="footer-web">Web</span><span class="footer-studio">STUDIO</span> </a>
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     <div class="social">
