--- a/index.html
+++ b/index.html
@@ -162,7 +162,19 @@ referrerpolicy="no-referrer" />
         </ul>
     </div>
 </section>
-
+<section class="work">
+    <div class="container">
+<h2 class="work-title">What are we doing</h2>
+<ul class="work-list list">
+<li class="work-item">
+<img src="./images/comp.jpg" alt="computer" width="360" height="300"/></li>
+<li class="work-item">
+<img src="./images/watch.jpg" alt="WhatsApp" width="360" height="300"/></li>
+<li class="work-item">
+<img src="./images/tel.jpg" alt="telephone" width="360" height="300"/></li>
+</ul>
+</div>
+</section>
 
 <section class="team">
     <div class="container">
